@@ -189,3 +189,5 @@
 ! API: ThemeMenuPiece rewritten in order to use and support ThemeMap. ThemeMenuPiece does no longer contain a list of ThemeFactories.
 - Bugfix: Moving away from EclipseTheme could left some Dockables invisible
 - Bugfix: updateColors in varios DockThemes could throw NPE (found by Parag Shah)
+- Bugfix: SelectableMenuHandler did not register a listener on JCheckBoxMenuItem or JRadioButtonMenuItem and as a result these items did not work.
+ 
